<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#9400F3"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp" >

    <CheckBox
        android:id="@+id/callonly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/callonly" />

    <CheckBox
        android:id="@+id/smsonly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smsonly" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/selcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/selcontacts" />

        <RadioButton
            android:id="@+id/allcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allcontacts" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/msgset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msgsettings" />

        <Button
            android:id="@+id/conset"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/contacts" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/passsave" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>