<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#9400F3"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="90dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />

    <ToggleButton
        android:id="@+id/service"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textOff="@string/active"
        android:textOn="@string/deactive" />
    <Button
        android:id="@+id/settings"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/settings" />

</LinearLayout>