<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#9400F3"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/msg"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/msgtosend"
        android:layout_width="274dp"
        android:layout_height="0dp"
        android:layout_weight="0.14"
        android:gravity="top"
        android:hint="@string/hint" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/passsave" />


        <Button
            android:id="@+id/cancel"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>