<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#9400F3"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/selected"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:text="@string/scon" />

        <Button
            android:id="@+id/back"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addcon" />

        <Button
            android:id="@+id/save"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#9400F3" >
    </ListView>

</LinearLayout>